this is the anim folder i have added to my project

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,8 +40,8 @@
                     android:id="@+id/address"
                     android:text="2465 Latham St\nMountain View, CA 94043"
                     android:textColor="@color/colorPrimary"
-                    android:background="#7c60bede"
                     android:onClick="googleMapsIntent"
+                    android:background="@color/background"
                     android:drawableLeft="@drawable/ic_location_on_white_24dp"
                     android:autoLink="map"
                     android:textSize="16sp" />
@@ -59,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:text="650-555-5555"
                     android:autoLink="phone"
-                    android:background="#7c60bede"
+                    android:background="@color/background"
                     android:drawableLeft="@drawable/ic_phone_white_24dp"
                     android:textColor="@color/colorPrimary"
                     android:id="@+id/phone"
@@ -78,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="www.udacity.com"
-                    android:background="#7c60bede"
+                    android:background="@color/background"
                     android:autoLink="web"
                     android:id="@+id/web"
                     android:onClick="webIntent"
