--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#29b6f6</color>
     <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="background">#7c60bede</color>
 </resources>
